# avr-hal-template

./: Cargo.toml  cargo-generate.toml
.cargo/: config.toml
