[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
ufmt_float = "0.1.0"
nb = "1.0.0"
embedded-hal = "0.2.3"
micromath = "2.0.0"
avr-device = "0.3.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
branch = "main"
{% case board -%}
  {%- when "Arduino Leonardo" -%}
    features = ["arduino-leonardo"]
  {%- when "Arduino Mega 2560" -%}
    features = ["arduino-mega2560"]
  {%- when "Arduino Nano" -%}
    features = ["arduino-nano"]
  {%- when "Arduino Uno" -%}
    features = ["arduino-uno"]
  {%- when "SparkFun ProMicro" -%}
    features = ["sparkfun-promicro"]
  {%- when "Nano168" -%}
    features = ["nano168"]
{%- endcase %}

[profile.dev]
panic = "abort"
opt-level = "s"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"